# Tarpaulin

./: .gitignore  .gitmessage  LICENSE  README.md  cli.py  conventional_commits.py  main.py  pyproject.toml  setup_cli.sh  setup_conventional_commits.sh  version.py
.github/workflows/: semantic-versioning.yml  semantic-versioning.yml.old
Backend/: .example.env  app.py  canvas_service.py  requirements.txt
docs/: CONVENTIONAL_COMMITS.md  VERSION.md
hooks/: post-commit
utils/: README.md  ci_version.py  conventional_commits.py  dynamic_version.py  semver.py  setup_conventional_commits.sh  version.py
