[project]
name = "tarpaulin"
dynamic = ["version"]
description = "Canvas AI Dashboard with Automated Semantic Versioning"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.0.15",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-huggingface>=0.3.1",
    "langchain-openai>=0.3.28",
    "openai>=1.98.0",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.0.0",
    "uvicorn[standard]>=0.35.0",
]

[project.scripts]
canvas = "cli:main"
tarpaulin-backend = "Backend.app:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["Backend*", "utils*"]
exclude = ["hooks*", "docs*", "__pycache__*", "*.egg-info*"]

[tool.setuptools]
py-modules = ["cli"]

# Version is now managed by git tags only
# Use: python version.py to get current version
